* js/info.css (div[node]): set "overflow: hidden", as was the setting before change on 2021-02-14.  This should not be necessary but is an extra way to stop a double scroll bar from appearing.

--- a/js/info.css
+++ b/js/info.css
@@ -22,7 +22,7 @@ header > a {
 
 div[node] {
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 body[show-sidebar="no"] div#sub-pages {
     left: 0px;
